--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "body-parser": "^1.19.0",
     "express": "^4.17.1",
     "geo-nearby": "github:kthilagarajan/geo-nearby",
+    "jsonwebtoken": "^8.5.1",
     "lodash": "^4.17.15",
     "moment": "^2.26.0",
     "path": "^0.12.7",
